# ports-wip

./: README  TODO
audio/audacious-plugins/: Makefile
audio/dino/: Makefile  distinfo
audio/hgd/: Makefile  distinfo
audio/jack/: Makefile
audio/jack-hacked/: Makefile
audio/jack/files/sndio-midi/: Makefile.am  sndio_midi.h  sndio_midi_driver.c
audio/lash/: Makefile  distinfo
audio/liblo/: LOG  Makefile
audio/lmms/: Makefile  distinfo
audio/non-sequencer/: Makefile  distinfo
audio/qjackctl/: Makefile  distinfo
comms/lcdproc/: Makefile
devel/_ocaml-findlib/: Makefile
devel/agar/: Makefile  distinfo
devel/distorm/: Makefile  distinfo
devel/glpk/: Makefile  distinfo
devel/libdwarf/: Makefile  distinfo
devel/libticables2/: Makefile  distinfo
devel/libticalcs2/: Makefile  distinfo
devel/libticonv/: Makefile  distinfo
devel/libtifiles2/: Makefile  distinfo
devel/ocaml-findlib/: Makefile
devel/ocaml-gmp/: Makefile
devel/ocaml-mlgmp/: Makefile
devel/ocaml-net/: Makefile
devel/p5-ReadLine-TTytter/: distinfo
devel/p5-Term-ReadLine-TTYtter/: Makefile
devel/py-distutils-extra/: Makefile  distinfo
devel/py-elftools/: Makefile
devel/py-gtksourceview/: Makefile  distinfo
devel/py-udis86/: Makefile  distinfo
devel/pyelftools/: Makefile
devel/qt-creator/: Makefile  distinfo
devel/quirks/: Makefile
devel/radare/: Makefile
devel/radare2/: .#Makefile.inc.1.1.1.1  Makefile  Makefile.inc  distinfo
devel/sigrok/: Makefile.inc
diffs/: current.html  quirks-tl.diff  texlive.diff  tl-quirks-both.diff  tlreadme.diff
(+1214 files in other folders)
